// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots SquareGame/Bord Default 1`] = `
.emotion-0:after {
  content: "";
  display: table;
  clear: both;
}

.emotion-1 {
  background: #f0f8ff;
  border: 1px solid #999;
  float: left;
  font-size: 24px;
  font-weight: bold;
  line-height: 34px;
  height: 34px;
  margin-right: -1px;
  margin-top: -1px;
  padding: 0;
  text-align: center;
  width: 34px;
}

<div>
  <div
    className="emotion-0"
  >
    <button
      className="square emotion-1"
      data-cy="square"
      onClick={[Function]}
    />
    <button
      className="square emotion-1"
      data-cy="square"
      onClick={[Function]}
    />
    <button
      className="square emotion-1"
      data-cy="square"
      onClick={[Function]}
    />
  </div>
  <div
    className="emotion-0"
  >
    <button
      className="square emotion-1"
      data-cy="square"
      onClick={[Function]}
    />
    <button
      className="square emotion-1"
      data-cy="square"
      onClick={[Function]}
    />
    <button
      className="square emotion-1"
      data-cy="square"
      onClick={[Function]}
    />
  </div>
  <div
    className="emotion-0"
  >
    <button
      className="square emotion-1"
      data-cy="square"
      onClick={[Function]}
    />
    <button
      className="square emotion-1"
      data-cy="square"
      onClick={[Function]}
    />
    <button
      className="square emotion-1"
      data-cy="square"
      onClick={[Function]}
    />
  </div>
</div>
`;

exports[`Storyshots SquareGame/Bord Default And Triangle 1`] = `
.emotion-0:after {
  content: "";
  display: table;
  clear: both;
}

.emotion-1 {
  background: #f0f8ff;
  border: 1px solid #999;
  float: left;
  font-size: 24px;
  font-weight: bold;
  line-height: 34px;
  height: 34px;
  margin-right: -1px;
  margin-top: -1px;
  padding: 0;
  text-align: center;
  width: 34px;
}

<div>
  <div
    className="emotion-0"
  >
    <button
      className="square emotion-1"
      data-cy="square"
      onClick={[Function]}
    >
      ○
    </button>
    <button
      className="square emotion-1"
      data-cy="square"
      onClick={[Function]}
    >
      ○
    </button>
    <button
      className="square emotion-1"
      data-cy="square"
      onClick={[Function]}
    >
      ○
    </button>
  </div>
  <div
    className="emotion-0"
  >
    <button
      className="square emotion-1"
      data-cy="square"
      onClick={[Function]}
    >
      ×
    </button>
    <button
      className="square emotion-1"
      data-cy="square"
      onClick={[Function]}
    >
      ×
    </button>
    <button
      className="square emotion-1"
      data-cy="square"
      onClick={[Function]}
    >
      ×
    </button>
  </div>
  <div
    className="emotion-0"
  >
    <button
      className="square emotion-1"
      data-cy="square"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="square emotion-1"
      data-cy="square"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="square emotion-1"
      data-cy="square"
      onClick={[Function]}
    >
      △
    </button>
  </div>
</div>
`;

exports[`Storyshots SquareGame/Bord Star 1`] = `
.emotion-0:after {
  content: "";
  display: table;
  clear: both;
}

.emotion-1 {
  background: #f0f8ff;
  border: 1px solid #999;
  float: left;
  font-size: 24px;
  font-weight: bold;
  line-height: 34px;
  height: 34px;
  margin-right: -1px;
  margin-top: -1px;
  padding: 0;
  text-align: center;
  width: 34px;
}

<div>
  <div
    className="emotion-0"
  >
    <button
      className="square emotion-1"
      data-cy="square"
      onClick={[Function]}
    >
      ☆
    </button>
    <button
      className="square emotion-1"
      data-cy="square"
      onClick={[Function]}
    >
      ☆
    </button>
    <button
      className="square emotion-1"
      data-cy="square"
      onClick={[Function]}
    >
      ☆
    </button>
  </div>
  <div
    className="emotion-0"
  >
    <button
      className="square emotion-1"
      data-cy="square"
      onClick={[Function]}
    >
      ☆
    </button>
    <button
      className="square emotion-1"
      data-cy="square"
      onClick={[Function]}
    >
      ☆
    </button>
    <button
      className="square emotion-1"
      data-cy="square"
      onClick={[Function]}
    >
      ☆
    </button>
  </div>
  <div
    className="emotion-0"
  >
    <button
      className="square emotion-1"
      data-cy="square"
      onClick={[Function]}
    >
      ☆
    </button>
    <button
      className="square emotion-1"
      data-cy="square"
      onClick={[Function]}
    >
      ☆
    </button>
    <button
      className="square emotion-1"
      data-cy="square"
      onClick={[Function]}
    >
      ☆
    </button>
  </div>
</div>
`;

exports[`Storyshots SquareGame/Bord Triangle 1`] = `
.emotion-0:after {
  content: "";
  display: table;
  clear: both;
}

.emotion-1 {
  background: #f0f8ff;
  border: 1px solid #999;
  float: left;
  font-size: 24px;
  font-weight: bold;
  line-height: 34px;
  height: 34px;
  margin-right: -1px;
  margin-top: -1px;
  padding: 0;
  text-align: center;
  width: 34px;
}

<div>
  <div
    className="emotion-0"
  >
    <button
      className="square emotion-1"
      data-cy="square"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="square emotion-1"
      data-cy="square"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="square emotion-1"
      data-cy="square"
      onClick={[Function]}
    >
      △
    </button>
  </div>
  <div
    className="emotion-0"
  >
    <button
      className="square emotion-1"
      data-cy="square"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="square emotion-1"
      data-cy="square"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="square emotion-1"
      data-cy="square"
      onClick={[Function]}
    >
      △
    </button>
  </div>
  <div
    className="emotion-0"
  >
    <button
      className="square emotion-1"
      data-cy="square"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="square emotion-1"
      data-cy="square"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="square emotion-1"
      data-cy="square"
      onClick={[Function]}
    >
      △
    </button>
  </div>
</div>
`;

exports[`Storyshots SquareGame/Game Default 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-1:after {
  content: "";
  display: table;
  clear: both;
}

.emotion-2 {
  background: #f0f8ff;
  border: 1px solid #999;
  float: left;
  font-size: 24px;
  font-weight: bold;
  line-height: 34px;
  height: 34px;
  margin-right: -1px;
  margin-top: -1px;
  padding: 0;
  text-align: center;
  width: 34px;
}

.emotion-13 {
  margin-left: 15px;
}

<div
  className="emotion-0"
>
  <div
    className="game-board"
  >
    <div>
      <div
        className="emotion-1"
      >
        <button
          className="square emotion-2"
          data-cy="square"
          onClick={[Function]}
        />
        <button
          className="square emotion-2"
          data-cy="square"
          onClick={[Function]}
        />
        <button
          className="square emotion-2"
          data-cy="square"
          onClick={[Function]}
        />
      </div>
      <div
        className="emotion-1"
      >
        <button
          className="square emotion-2"
          data-cy="square"
          onClick={[Function]}
        />
        <button
          className="square emotion-2"
          data-cy="square"
          onClick={[Function]}
        />
        <button
          className="square emotion-2"
          data-cy="square"
          onClick={[Function]}
        />
      </div>
      <div
        className="emotion-1"
      >
        <button
          className="square emotion-2"
          data-cy="square"
          onClick={[Function]}
        />
        <button
          className="square emotion-2"
          data-cy="square"
          onClick={[Function]}
        />
        <button
          className="square emotion-2"
          data-cy="square"
          onClick={[Function]}
        />
      </div>
    </div>
  </div>
  <div
    className="emotion-13"
  >
    <div>
      次のプレイヤー: X
    </div>
    <ol>
      <li>
        <button
          onClick={[Function]}
        >
          Go to game start
        </button>
      </li>
    </ol>
  </div>
</div>
`;

exports[`Storyshots SquareGame/Game Draw 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-1:after {
  content: "";
  display: table;
  clear: both;
}

.emotion-2 {
  background: #f0f8ff;
  border: 1px solid #999;
  float: left;
  font-size: 24px;
  font-weight: bold;
  line-height: 34px;
  height: 34px;
  margin-right: -1px;
  margin-top: -1px;
  padding: 0;
  text-align: center;
  width: 34px;
}

.emotion-13 {
  margin-left: 15px;
}

<div
  className="emotion-0"
>
  <div
    className="game-board"
  >
    <div>
      <div
        className="emotion-1"
      >
        <button
          className="square emotion-2"
          data-cy="square"
          onClick={[Function]}
        >
          O
        </button>
        <button
          className="square emotion-2"
          data-cy="square"
          onClick={[Function]}
        >
          X
        </button>
        <button
          className="square emotion-2"
          data-cy="square"
          onClick={[Function]}
        >
          O
        </button>
      </div>
      <div
        className="emotion-1"
      >
        <button
          className="square emotion-2"
          data-cy="square"
          onClick={[Function]}
        >
          O
        </button>
        <button
          className="square emotion-2"
          data-cy="square"
          onClick={[Function]}
        >
          X
        </button>
        <button
          className="square emotion-2"
          data-cy="square"
          onClick={[Function]}
        >
          O
        </button>
      </div>
      <div
        className="emotion-1"
      >
        <button
          className="square emotion-2"
          data-cy="square"
          onClick={[Function]}
        >
          X
        </button>
        <button
          className="square emotion-2"
          data-cy="square"
          onClick={[Function]}
        >
          O
        </button>
        <button
          className="square emotion-2"
          data-cy="square"
          onClick={[Function]}
        >
          X
        </button>
      </div>
    </div>
  </div>
  <div
    className="emotion-13"
  >
    <div>
      Draw!
    </div>
    <ol>
      <li>
        <button
          onClick={[Function]}
        >
          Go to game start
        </button>
      </li>
    </ol>
  </div>
</div>
`;

exports[`Storyshots SquareGame/Square Default 1`] = `
.emotion-0 {
  background: #f0f8ff;
  border: 1px solid #999;
  float: left;
  font-size: 24px;
  font-weight: bold;
  line-height: 34px;
  height: 34px;
  margin-right: -1px;
  margin-top: -1px;
  padding: 0;
  text-align: center;
  width: 34px;
}

<button
  className="square emotion-0"
  data-cy="square"
/>
`;

exports[`Storyshots SquareGame/Square Star 1`] = `
.emotion-0 {
  background: #f0f8ff;
  border: 1px solid #999;
  float: left;
  font-size: 24px;
  font-weight: bold;
  line-height: 34px;
  height: 34px;
  margin-right: -1px;
  margin-top: -1px;
  padding: 0;
  text-align: center;
  width: 34px;
}

<button
  className="square emotion-0"
  data-cy="square"
>
  ☆
</button>
`;

exports[`Storyshots SquareGame/Square Triangle 1`] = `
.emotion-0 {
  background: #f0f8ff;
  border: 1px solid #999;
  float: left;
  font-size: 24px;
  font-weight: bold;
  line-height: 34px;
  height: 34px;
  margin-right: -1px;
  margin-top: -1px;
  padding: 0;
  text-align: center;
  width: 34px;
}

<button
  className="square emotion-0"
  data-cy="square"
>
  △
</button>
`;
